--- a/EmployeManagementSystem/Views/Shared/_Layout.cshtml
+++ b/EmployeManagementSystem/Views/Shared/_Layout.cshtml
@@ -1,49 +1,217 @@
-﻿<!DOCTYPE html>
+﻿<!doctype html>
 <html lang="en">
+<!--begin::Head-->
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EmployeManagementSystem</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/EmployeManagementSystem.styles.css" asp-append-version="true" />
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EmployeManagementSystem</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>@ViewData["Title"] - EmployeManagementSystem</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<meta name="author" content="Pranav patel" />
+	<!--begin::Fonts-->
 
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2025 - EmployeManagementSystem - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-    <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/js/site.js" asp-append-version="true"></script>
-    @await RenderSectionAsync("Scripts", required: false)
+	<link rel="stylesheet"
+		  href="https://cdn.jsdelivr.net/npm/@@fontsource/source-sans-3@5.0.12/index.css"
+		  integrity="sha256-tXJfXfp6Ewt1ilPzLDtQnJV4hclT9XuaZUKyUvmyr+Q="
+		  crossorigin="anonymous" />
+	<!--end::Fonts-->
+	<!--begin::Third Party Plugin(OverlayScrollbars)-->
+	<link rel="stylesheet"
+		  href="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.10.1/styles/overlayscrollbars.min.css"
+		  integrity="sha256-tZHrRjVqNSRyWg2wbppGnT833E/Ys0DHWGwT04GiqQg="
+		  crossorigin="anonymous" />
+	<!--end::Third Party Plugin(OverlayScrollbars)-->
+	<!--begin::Third Party Plugin(Bootstrap Icons)-->
+	<link rel="stylesheet"
+		  href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+		  integrity="sha256-9kPW/n5nn53j4WMRYAxe9c1rCY96Oogo/MKSVdKzPmI="
+		  crossorigin="anonymous" />
+	<!--end::Third Party Plugin(Bootstrap Icons)-->
+	<!--begin::Required Plugin(AdminLTE)-->
+	<link href="~/css/adminlte.css" rel="stylesheet" />
+	<!--end::Required Plugin(AdminLTE)-->
+	@await RenderSectionAsync("Styles", required: false)
+
+</head>
+<!--end::Head-->
+<!--begin::Body-->
+<body class="layout-fixed sidebar-expand-lg bg-body-tertiary">
+	<!--begin::App Wrapper-->
+	<div class="app-wrapper">
+		<!--begin::Header-->
+		<nav class="app-header navbar navbar-expand bg-body">
+			<!--begin::Container-->
+			<div class="container-fluid">
+				<!--begin::Start Navbar Links-->
+				<ul class="navbar-nav">
+					<li class="nav-item">
+						<a class="nav-link" data-lte-toggle="sidebar" href="#" role="button">
+							<i class="bi bi-list"></i>
+						</a>
+					</li>
+
+				</ul>
+				<!--end::Start Navbar Links-->
+				<!--begin::End Navbar Links-->
+				<ul class="navbar-nav ms-auto">
+
+					<!--end::Navbar Search-->
+					<!--begin::Notifications Dropdown Menu-->
+					<li class="nav-item dropdown">
+						<a class="nav-link" data-bs-toggle="dropdown" href="#">
+							<i class="bi bi-bell-fill"></i>
+						</a>
+
+					</li>
+					<!--end::Notifications Dropdown Menu-->
+					<!--begin::Fullscreen Toggle-->
+					<li class="nav-item">
+						<a class="nav-link" href="#" data-lte-toggle="fullscreen">
+							<i data-lte-icon="maximize" class="bi bi-arrows-fullscreen"></i>
+							<i data-lte-icon="minimize" class="bi bi-fullscreen-exit" style="display: none"></i>
+						</a>
+					</li>
+					<!--end::Fullscreen Toggle-->
+					<!--begin::User Menu Dropdown-->
+					<li class="nav-item dropdown user-menu">
+						<a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
+							<span class="d-none d-md-inline">Logout</span>
+						</a>
+					</li>
+					<!--end::User Menu Dropdown-->
+				</ul>
+				<!--end::End Navbar Links-->
+			</div>
+			<!--end::Container-->
+		</nav>
+		<!--end::Header-->
+		<!--begin::Sidebar-->
+		<aside class="app-sidebar bg-body-secondary shadow" data-bs-theme="dark">
+			<!--begin::Sidebar Brand-->
+			<div class="sidebar-brand">
+				<!--begin::Brand Link-->
+				<a href="../index.html" class="brand-link">
+					<!--begin::Brand Image-->
+					<i class="bi bi-person-circle"></i>
+					<!--end::Brand Image-->
+					<!--begin::Brand Text-->
+					<span class="brand-text fw-light">Pranav patel</span>
+					<!--end::Brand Text-->
+				</a>
+				<!--end::Brand Link-->
+			</div>
+			<!--end::Sidebar Brand-->
+			<!--begin::Sidebar Wrapper-->
+			<div class="sidebar-wrapper">
+				<nav class="mt-2">
+					<!--begin::Sidebar Menu-->
+					<ul class="nav sidebar-menu flex-column"
+						data-lte-toggle="treeview"
+						role="menu"
+						data-accordion="false">
+						<li class="nav-item">
+							<a href="#" class="nav-link">
+								<i class="nav-icon bi bi-speedometer"></i>
+								<p>
+									Dashboard
+									<i class="nav-arrow bi bi-chevron-right"></i>
+								</p>
+							</a>
+							<ul class="nav nav-treeview">
+								<li class="nav-item">
+									<a href="../index.html" class="nav-link">
+										<i class="nav-icon bi bi-circle"></i>
+										<p>Dashboard v1</p>
+									</a>
+								</li>
+								<li class="nav-item">
+									<a href="../index2.html" class="nav-link">
+										<i class="nav-icon bi bi-circle"></i>
+										<p>Dashboard v2</p>
+									</a>
+								</li>
+								<li class="nav-item">
+									<a href="../index3.html" class="nav-link">
+										<i class="nav-icon bi bi-circle"></i>
+										<p>Dashboard v3</p>
+									</a>
+								</li>
+							</ul>
+						</li>
+						@{
+							int a = 1;
+							@if (a == 2)
+							{
+								<li class="nav-item">
+									<a href="../generate/theme.html" class="nav-link">
+										<i class="nav-icon bi bi-palette"></i>
+										<p>Theme Generate</p>
+									</a>
+								</li>
+							}
+						}
+					</ul>
+					<!--end::Sidebar Menu-->
+				</nav>
+			</div>
+			<!--end::Sidebar Wrapper-->
+		</aside>
+		<!--end::Sidebar-->
+		<!--begin::App Main-->
+		<main class="app-main">
+			<!--begin::App Content-->
+			<div class="app-content">
+				<!--begin::Container-->
+				<div class="container-fluid">
+					<!--begin::Row-->
+					@RenderBody()
+					<!--end::Row-->
+				</div>
+				<!--end::Container-->
+			</div>
+			<!--end::App Content-->
+		</main>
+		<!--end::App Main-->
+
+	</div>
+	<!--end::App Wrapper-->
+	<!--begin::Script-->
+	<!--begin::Third Party Plugin(OverlayScrollbars)-->
+	<script src="https://cdn.jsdelivr.net/npm/overlayscrollbars@2.10.1/browser/overlayscrollbars.browser.es6.min.js"
+			integrity="sha256-dghWARbRe2eLlIJ56wNB+b760ywulqK3DzZYEpsg2fQ="
+			crossorigin="anonymous"></script>
+	<!--end::Third Party Plugin(OverlayScrollbars)--><!--begin::Required Plugin(popperjs for Bootstrap 5)-->
+	<script src="https://cdn.jsdelivr.net/npm/@@popperjs/core@2.11.8/dist/umd/popper.min.js"
+			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+			crossorigin="anonymous"></script>
+	<!--end::Required Plugin(popperjs for Bootstrap 5)--><!--begin::Required Plugin(Bootstrap 5)-->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+			crossorigin="anonymous"></script>
+	<!--end::Required Plugin(Bootstrap 5)--><!--begin::Required Plugin(AdminLTE)-->
+	<script src="~/js/adminlte.js"></script>
+	<!--end::Required Plugin(AdminLTE)--><!--begin::OverlayScrollbars Configure-->
+	<script>
+		const SELECTOR_SIDEBAR_WRAPPER = '.sidebar-wrapper';
+		const Default = {
+		  scrollbarTheme: 'os-theme-light',
+		  scrollbarAutoHide: 'leave',
+		  scrollbarClickScroll: true,
+		};
+		document.addEventListener('DOMContentLoaded', function () {
+		  const sidebarWrapper = document.querySelector(SELECTOR_SIDEBAR_WRAPPER);
+		  if (sidebarWrapper && typeof OverlayScrollbarsGlobal?.OverlayScrollbars !== 'undefined') {
+			OverlayScrollbarsGlobal.OverlayScrollbars(sidebarWrapper, {
+			  scrollbars: {
+				theme: Default.scrollbarTheme,
+				autoHide: Default.scrollbarAutoHide,
+				clickScroll: Default.scrollbarClickScroll,
+			  },
+			});
+		  }
+		});
+	</script>
+	<!--end::OverlayScrollbars Configure-->
+	@await RenderSectionAsync("Scripts", required: false)
+	<!--end::Script-->
 </body>
+<!--end::Body-->
 </html>
